<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/Titulo"
        android:textSize="35dp"
        android:textAlignment="center"
        android:background="#32CD32"
        android:textColor="#FFFFFF"
        android:gravity="center">

    </TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#32CD32"
        android:layout_margin="15dp"
        android:layout_marginTop="100dp">



        <TextView
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="28sp"
            android:text="Almacenando información con SharedPreference "
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="10dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#32CD32"
        android:layout_marginTop="100dp">

        <TextView
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="@string/txtCedula"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_margin="1dp"
            android:layout_marginTop="10dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="100dp">


        <EditText
            android:id="@+id/etcedula"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#32CD32"

        android:layout_marginTop="100dp">

        <TextView
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="@string/txtnombre"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_margin="1dp"
            android:layout_marginTop="10dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="100dp">


        <EditText
            android:id="@+id/etnombre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#32CD32"
        android:layout_marginTop="100dp">

        <TextView
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="@string/txtelefono"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_margin="1dp"
            android:layout_marginTop="10dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="100dp">


        <EditText
            android:id="@+id/etelefono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="14dp">

        <Button
            android:id="@+id/registrar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btnregistrar"
            android:textSize="25dp"
            android:layout_margin="1dp"
            android:backgroundTint="#000080">

        </Button>

        <Button
            android:id="@+id/consultar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btnconsultar"
            android:textSize="24dp"
            android:layout_margin="1dp"
            android:backgroundTint="#000080">

        </Button>
</LinearLayout>


</LinearLayout>